_drafts/k8s-dev/dev/app/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleweb
  namespace: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleweb
  template:
    metadata:
      labels:
        app: sampleweb
    spec:
      containers:
        - name: sampleweb
          image: nginx:1.24.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sampleweb
  namespace: sample
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sampleweb
