_drafts/k8s-dev/dev/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: sampleweb-public
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleweb-ingress
  namespace: sample
spec:
  IngressClassName: sampleweb-public
  rules:
  - host: dev.sampleweb.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sampleweb
            port: 
              number: 80
